@@ -3712,6 +3712,19 @@ test text-32.1 {peer widget -start, -end and selection} {
     set res
 } {{10.0 20.0} {6.0 16.0} {6.0 11.0} {1.0 6.0} {1.0 2.0} {} {10.0 20.0}}
 
+test text-33.1 {widget dump -command alters tags} {
+    .t delete 1.0 end
+    .t insert end "abc\n" a "---" {} "def" b "   \n" {} "ghi\n" c
+    .t tag configure b -background red
+
+    proc Dumpy {key value index} {
+      #puts "KK: $key, $value"
+      .t tag add $value [list $index linestart] [list $index lineend]
+    }
+    .t dump -all -command Dumpy 1.0 end
+    set result "ok"
+} {ok}
+
 deleteWindows
 option clear
 
